[package]
name = "advent"
version = "0.1.0"
authors = ["Josh Comer <jcomer@cvent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench=false

[dependencies]
anyhow = "1.0"
itertools = "0.8"
lazy_static = "1.4"
petgraph = "0.4"
aoc-runner = "0.2"
aoc-runner-derive = "0.2"
